Make build/test workflow less verbos

--- a/.github/workflows/go-build-test.yml
+++ b/.github/workflows/go-build-test.yml
@@ -27,8 +27,8 @@ jobs:
         
         - name: go build
           run: |
-            go build -v ./...
-            env GOOS=js GOARCH=wasm go build -v ./...
+            go build ./...
+            env GOOS=js GOARCH=wasm go build ./...
             # Examples
             go build -o gpu ./examples/gpu/examples
             go build ./examples/helloworld
